// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Agent prompts toolUsePrompt should generate tool use documentation with tools 1`] = `
"
====

TOOL USE

You have access to a set of tools that are executed upon the user's approval. You can use one tool per message, and will receive the result of that tool use in the user's response. You use tools step-by-step to accomplish a given task, with each tool use informed by the result of the previous tool use.

# Tool Use Formatting

Tool use is formatted using XML-style tags. The tool name is enclosed in opening and closing tags, and each parameter is similarly enclosed within its own set of tags. Here's the structure:

<tool_tool_name>
<tool_parameter_name1>value1</tool_parameter_name1>
<tool_parameter_name2>value2</tool_parameter_name2>
...
</tool_tool_name>

For example:

<tool_read_file>
<tool_parameter_path>src/main.js</tool_parameter_path>
</tool_read_file>

Always adhere to this format for the tool use to ensure proper parsing and execution.

# Tools

## tool_test_tool

Description: A test tool

Parameters:
- tool_parameter_param1: (required) First parameter
- tool_parameter_param2: (optional) Second parameter

Usage:
<tool_test_tool>
<tool_parameter_param1>value1</tool_parameter_param1>
<tool_parameter_param2>value2</tool_parameter_param2>
</tool_test_tool>

# Tool Use Examples

## Example 1: Example usage

<tool_test_tool>
<tool_parameter_param1>test1</tool_parameter_param1>
<tool_parameter_param2>test2</tool_parameter_param2>
</tool_test_tool>

# Tool Use Guidelines

1. **Thinking Tags**: Use \`<thinking>\` tags to clearly outline your thought process *before* using any tools. This includes:
  *  Assessing the current situation and available information.
  *  Defining specific goals and a plan to achieve them.
  *  Justifying the selection of a particular tool.
  *  Explaining how you intend to use the tool and what you expect to achieve.
2. **Tool Selection**: Choose one tool at a time per message based on the task and its description. Do not assume a tool’s outcome without explicit confirmation.
3. **Formatting**: Formulate tool use only in the specified XML format for each tool.
4. **User Response**: Wait for the user’s response after each tool use. Do not proceed until you have their confirmation. The user’s response may include:
  *  Tool success or failure details
  *  Linter errors
  *  Terminal output or other relevant feedback
5. **Conciseness**: Never repeat or quote the entire tool command in your final user-facing message. Summarize outcomes clearly and avoid echoing commands verbatim.
6. **Brevity**: Respond concisely and move the conversation forward. Do not re-issue the same command or re-trigger tool use without necessity.
7. **Iteration**: Follow these steps iteratively, confirming success and addressing issues as you go.
8. **Error Handling**: If a tool returns an error, analyze the error message and adjust your approach accordingly. Consider alternative tools or strategies to achieve the desired outcome.

By adhering to these guidelines:
- You maintain clarity without accidentally re-invoking tools.
- You confirm each step’s results before proceeding.
- You provide only the necessary information in user-facing replies to prevent re-interpretation as new commands."
`;

exports[`Agent prompts agentsPrompt should generate agents documentation 1`] = `
"
====

AVAILABLE AGENTS

The following agents are available for task handover/delegate:

- **TestAgent**
  - Responsibilities:
    - Test responsibility 1
    - Test responsibility 2

- **AnotherAgent**
  - Responsibilities:
    - Another responsibility

- **Current Agent Role**
  You are currently acting as **CurrentAgent**. If you identify the task is beyond your current scope, use the handover or delegate tool to transition to the other agent. Include sufficient context so the new agent can seamlessly continue the work.
"
`;

exports[`Agent prompts agentsPrompt should include current agent name 1`] = `
"
====

AVAILABLE AGENTS

The following agents are available for task handover/delegate:

- **TestAgent**
  - Responsibilities:
    - Test responsibility

- **Current Agent Role**
  You are currently acting as **CurrentAgent**. If you identify the task is beyond your current scope, use the handover or delegate tool to transition to the other agent. Include sufficient context so the new agent can seamlessly continue the work.
"
`;

exports[`Agent prompts responsePrompts errorInvokeTool should format error message 1`] = `"An error occurred while invoking the tool "test_tool": Test error"`;

exports[`Agent prompts responsePrompts requireUseTool should return error message 1`] = `"Error: You must use a tool before proceeding. Making sure the tool is invoked using xml tags."`;

exports[`Agent prompts responsePrompts toolResults should format tool results 1`] = `
"<tool_response>
<tool_name>test_tool</tool_name>
<tool_result>
Test result
</tool_result>
</tool_response>"
`;
